--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ body {
     position: absolute;
     right: 0;
     top: 0;
-    width: 98%;
+    width: 100%;
     height: 80vh;
     background-color: white;
   }
@@ -82,21 +82,33 @@ body {
     width: 90%;
     height: auto;
     object-fit: cover;
+    margin: auto;
   }
   .home-login {
     margin: auto 15px;
   }
+
+  .home-login h1,
+  .home-login p {
+    margin: auto;
+  }
+
   .home-btn {
-    margin-top: 20px;
-    width: 74% !important;
-    height: 10% !important;
-   
+    margin: 20px auto;
+    width: 80% !important;
+    height: 50px !important;
   }
   .home {
-
     background: white;
   }
+
   .home input {
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+  }
+
+  /* .home input {
     margin-bottom: 10px;
     margin-left: 34px;
     height: 28px;
@@ -104,17 +116,16 @@ body {
     padding: 0 3px;
 
     border: solid 1px #bababa;
-  }
-  .home input {
+  } */
+  /* .home input {
     margin-bottom: 8px;
     height: 10%;
     width: 74%;
     padding: 0 3px;
     border: solid 1px #bababa;
-  }
-  .college-name{
+  } */
+  .college-name {
     text-align: center;
     margin-right: 35px;
-    
   }
 }
