--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@
   margin: 0;
   padding: 0;
 }
-/* Font? */
 
 body {
   font-family: "Open Sans", sans-serif;
@@ -68,12 +67,48 @@ body {
   cursor: pointer;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 598px) {
   .home-container {
+    position: absolute;
+    right: 0;
+    top: 0;
     width: 100%;
+    height: 80vh;
+    background-color: white;
   }
 
+  .home-login img {
+    width: 90%;
+    height: auto;
+    object-fit: cover;
+    margin: auto;
+  }
   .home-login {
     margin: auto 15px;
+  }
+
+  .home-login h1,
+  .home-login p {
+    margin: auto;
+  }
+
+  .home-btn {
+    margin: 20px auto;
+    width: 80% !important;
+    height: 50px !important;
+  }
+  .home {
+    background: white;
+  }
+
+  .home input {
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+  }
+
+  .college-name {
+    text-align: center;
+    margin-right: 35px;
   }
 }
