--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
 
+/* User root: ? */
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -69,20 +71,15 @@ body {
 
 @media only screen and (max-width: 598px) {
   .home-container {
-    position: absolute;
-    right: 0;
-    top: 0;
     width: 100%;
     height: 80vh;
-    background-color: white;
   }
 
   .home-login img {
     width: 90%;
-    height: auto;
-    object-fit: cover;
     margin: auto;
   }
+
   .home-login {
     margin: auto 15px;
   }
