--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,22 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
 
-/* User root: ? */
+:root {
+  /* Background color for main contents */
+  --main-background: #f8f9fa;
+  /* Background color for sidebars */
+  --sidebar-background: #212529;
+
+  /* Sidebar text color */
+  --text-white: #f8f9fa;
+  /* Sidebar active background */
+  --sidebar-active: #0d6efd;
+
+  /* Button color */
+  --button-color-blue: #0067b8;
+
+  /* Input field border color */
+  --border-color-input: #bababa;
+}
 
 * {
   box-sizing: border-box;
@@ -26,7 +42,7 @@ body {
   top: 0;
   width: 500px;
   height: 100%;
-  background-color: white;
+  background-color: var(--main-background);
 }
 
 .home-login {
@@ -55,14 +71,14 @@ body {
   height: 28px;
   width: 340px;
   padding: 0 3px;
-  border: solid 1px #bababa;
+  border: solid 1px var(--border-color-input);
 }
 
 .home-btn {
   margin-top: 20px;
   border: none;
-  background-color: #0067b8;
-  color: white;
+  background-color: var(--button-color-blue);
+  color: var(--text-white);
   width: 80px !important;
   height: 30px !important;
   padding: 4px 20px;
@@ -95,7 +111,7 @@ body {
     height: 50px !important;
   }
   .home {
-    background: white;
+    background: var(--main-background);
   }
 
   .home input {
@@ -108,4 +124,58 @@ body {
     text-align: center;
     margin-right: 35px;
   }
+}
+
+/* Records Management System CSS */
+.main-record {
+  display: grid;
+  grid-template-columns: 280px 1fr;
+}
+
+.main-record .sidebar {
+  min-height: 100vh;
+  background-color: var(--sidebar-background);
+  color: var(--text-white);
+}
+
+.main-record .main-content {
+  background-color: aquamarine;
+}
+
+.sidebar-content {
+  margin: 15px;
+  height: 95%;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+}
+
+.sidebar-content hr {
+  border: none;
+  height: 1px;
+  background-color: #6c757d;
+  margin: 20px auto;
+}
+
+.sidebar-content a {
+  display: block;
+  margin: 5px auto;
+  padding: 10px;
+  color: var(--text-white);
+  list-style-type: none;
+  border-radius: 4px;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.sidebar-content a:hover {
+  background-color: var(--sidebar-active);
+}
+
+.sidebar-btn {
+  font-size: 18px;
+  color: var(--text-white);
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  letter-spacing: 1px;
 }
