--- a/css/style.css
+++ b/css/style.css
@@ -67,11 +67,18 @@ body {
   letter-spacing: 2px;
 }
 
-.home input {
+/* Form inputs */
+input {
   margin-bottom: 8px;
   height: 28px;
   width: 340px;
   padding: 0 3px;
+  border: solid 1px var(--border-color-input);
+}
+
+select {
+  padding: 4px;
+  background-color: white;
   border: solid 1px var(--border-color-input);
 }
 
@@ -140,6 +147,8 @@ body {
 }
 
 .main-record .main-content {
+  display: flex;
+  flex-direction: column;
   background-color: var(--main-background-dark);
 }
 
@@ -183,8 +192,7 @@ body {
 
 /* Table container */
 .table-container {
-  width: 80%;
-  min-height: 500px;
+  min-width: 60%;
   margin: 150px auto;
   padding: 20px 25px;
   background-color: var(--main-background);
@@ -207,4 +215,28 @@ th {
 
 tr:nth-child(even) {
   background-color: var(--border-color-input);
+}
+
+/* Create data */
+.record-form {
+  margin-top: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  row-gap: 10px;
+  column-gap: 15px;
+}
+
+.form-button {
+  grid-column: 1 / 3;
+  justify-self: center;
+  margin-top: 20px;
+  border: none;
+  background-color: var(--button-color-blue);
+  color: var(--text-white);
+  width: auto !important;
+  height: auto !important;
+  padding: 15px 20px;
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 18px;
 }
