--- a/css/style.css
+++ b/css/style.css
@@ -200,6 +200,21 @@ select {
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 }
 
+.top-table {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.top-table a {
+  text-decoration: none;
+  color: var(--text-white);
+  background-color: var(--button-color-blue);
+  padding: 10px 20px;
+  border-radius: 5px;
+}
+
 table {
   margin: 15px auto;
   border-collapse: collapse;
